--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "realrashid/sweet-alert": "^4.1",
+        "spatie/laravel-permission": "^5.4",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
@@ -28,7 +29,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/Admin.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
